--- a/notes_app_frontend/src/index.html
+++ b/notes_app_frontend/src/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular</title>
+  <title>Ocean Notes</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 24 24'%3E%3Cpath fill='%232563EB' d='M6 2h9l5 5v13a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2'/%3E%3Cpath fill='white' d='M14 2v6h6'/%3E%3C/svg%3E">
+  <script>
+    // Expose optional environment vars for client usage without build-time define.
+    (function () {
+      try {
+        window.NG_APP_NODE_ENV = (window.NG_APP_NODE_ENV || '') || (typeof process !== 'undefined' ? (process.env && process.env.NG_APP_NODE_ENV) : '') || '';
+      } catch (e) {}
+    })();
+  </script>
 </head>
 <body>
   <app-root></app-root>
